--- a/todo-app.html
+++ b/todo-app.html
@@ -68,7 +68,7 @@
     </form>
 
     <!-- Task filtering -->
-    <input placeholder="Filter tasks...">
+    <input placeholder="Filter tasks..." v-model="filterText">
 
     <!-- If there no tasks -->
     <div v-if="tasks.length === 0">
@@ -78,7 +78,7 @@
     <div v-else>
       <h3>Your Tasks</h3>
       <!-- This is a list of tasks -->
-      <div v-for="task in tasks" 
+      <div v-for="(task, index) in filteredTasks" 
       :key="task.id" 
       :class="{'task': true, completed: task.done, [task.priority.toLowerCase()]: true}"
       >
@@ -89,27 +89,40 @@
           <span>{{ task.description }}</span>
         </div>
         <!-- Removing a task -->
-        <button class="remove-button">✖</button>
+        <button class="remove-button" @click="removeTask(index)">✖</button>
       </div>
     </div>
   </div>
 
   <script>
-    const { createApp, onMounted, onBeforeMount, ref } = Vue;
+    const { createApp, onMounted, watch, watchEffect, ref, computed } = Vue;
 
     const App = {
       setup() {
-        const tasks = ref([
-            {
-                id: 1,
-                description: "Buy milk",
-                priority: "high",
-                done: false
-            }
-        ]);
+        const tasks = ref(
+          JSON.parse(
+            localStorage.getItem('tasks') ?? '[]'
+          )
+        )
+        // const tasks = ref([
+        //     {
+        //         id: 1,
+        //         description: "Buy milk",
+        //         priority: "high",
+        //         done: false
+        //     }
+        // ]);
+     
         const newTask = ref('');
         const newPriority = ref('');
         const newTaskInput = ref(null);
+        const filterText = ref('');
+        const filteredTasks = computed(
+          ()=> tasks.value.filter(
+            task=>task.description.toLowerCase()
+            .includes(filterText.value.toLowerCase())
+          )
+        )
         onMounted(()=> {
             newTaskInput.value.focus();
         });
@@ -128,12 +141,38 @@
                 newPriority.value = '';
             }
         }
+        const removeTask = (index) =>{
+          tasks.value.splice(index, 1);
+        }
+
+        // watch(newTask, (newValue, oldValue)=>{
+        //   console.log(
+        //     `New Value is ${newValue},
+        //     old value is ${oldValue}`
+        //   )
+        // }, {immediate: true});
+
+        watch(tasks, ()=>{
+          localStorage.setItem(
+            'tasks',
+            JSON.stringify(tasks.value)
+          )
+        }, {deep: true});
+
+        // watchEffect(()=>{
+        //   console.log(
+        //     'New task value is ${newTask.value}'
+        //   )
+        // })
         return {
             newTaskInput,
             tasks,
             addTask,
             newTask,
-            newPriority
+            newPriority,
+            removeTask,
+            filterText,
+            filteredTasks
         }
       },
     };
